Fixed text breaking on small devices in the title section

--- a/main.css
+++ b/main.css
@@ -95,6 +95,7 @@ h1 {
     font-size: 2.5rem;
     margin: 0;
     padding: 0;
+    text-align: center;
 }
 
 h3 {
@@ -102,6 +103,7 @@ h3 {
     font-size: 2rem;
     margin: 0;
     padding: 0;
+    text-align: center;
 }
 
 h4 {
@@ -109,6 +111,7 @@ h4 {
     font-size: 1.5rem;
     margin: 0;
     padding: 0;
+    text-align: center;
 }
 
 
